--- a/CaseStudySBA/GymSPA/ClientApp/src/index.html
+++ b/CaseStudySBA/GymSPA/ClientApp/src/index.html
@@ -9,6 +9,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-list-category>  </app-list-category>
+  <app-root>  </app-root>
 </body>
 </html>
